# polair

./: CITATION.cff  README.md  pyproject.toml
notebooks/: Manual_processing_steps.ipynb  Quicklooks.ipynb
notebooks/.ipynb_checkpoints/: Manual_processing_steps-checkpoint.ipynb  Quicklooks-checkpoint.ipynb
polair/: __main__.py  _calibration.py  _corr_fcts.py  _helpers.py  cli.py  device.py  noseboom.py  preprocessing.py  tbird.py
